update some documentation
